--- a/templates/card.html
+++ b/templates/card.html
@@ -34,7 +34,7 @@
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
                                             id="flexRadioDefault2" />
                                         <label class="form-check-label" for="flexRadioDefault2">
-                                            UCA <br />
+                                            Casimiro Sotelo <br />
                                             <small class="text-muted">5-7 dias para la entrega </small>
                                         </label>
                                     </div>
