--- a/templates/precio_producto.html
+++ b/templates/precio_producto.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block title %} || Precios productos{% endblock %}
 {% block css %}
-<link rel="stylesheet"
-    href="{{ url_for('static', filename='plugins/select2/css/select2.min.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='plugins/select2/css/select2.min.css') }}">
 <link rel="stylesheet"
     href="{{ url_for('static', filename='plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css') }}">
 <link rel="stylesheet"
@@ -37,16 +36,15 @@
                         <h3 class="card-title">Lista de Productos con sus
                             precios</h3>
                         <div class="align-content-end text-right">
-                            <button type="button" class="btn btn-secondary"
-                                data-toggle="modal" data-target="#modal-default">Agregar
+                            <button type="button" class="btn btn-secondary" data-toggle="modal"
+                                data-target="#modal-default">Agregar
                                 Precio Productos</button>
                         </div>
 
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
-                        <table id="example1"
-                            class="table table-bordered table-striped">
+                        <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
                                     <th>Producto</th>
@@ -70,81 +68,67 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <a href="#modal-default{{productos.id}}"
-                                            data-toggle="modal">
-                                            <i
-                                                class="fas fa-pencil-alt"></i>
+                                        <a href="#modal-default{{productos.id}}" data-toggle="modal">
+                                            <i class="fas fa-pencil-alt"></i>
                                         </a>
 
-                                        <a data-toggle="modal"
-                                            href="#modal-danger{{productos.id}}"
+                                        <a data-toggle="modal" href="#modal-danger{{productos.id}}"
                                             class="fas fa-trash-alt">
-                                            </a>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
+                                        </a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
 
-                                </tbody>
-                            </table>
-                        </div>
+                            </tbody>
+                        </table>
                     </div>
-
                 </div>
+
             </div>
         </div>
+    </div>
     </div>
     <!-- Edit Modal HTML -->
     <div id="modal-default" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form action="/crear_precio" method="post"
-                    enctype="multipart/form-data">
+                <form action="/crear_precio" method="post" enctype="multipart/form-data">
                     <div class="modal-header">
                         <h4 class="modal-title">Asignar precio</h4>
-                        <button type="button" class="close"
-                            data-dismiss="modal"
-                            aria-hidden="true">&times;</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
                             <label>Producto: </label>
-                            <select name="producto"
-                                id="producto"
-                                class="form-control select2bs4">
-                                {% for productos in productos %}
-                                <optgroup
-                                    label="{{ productos.subcategoria.categoria.nombre }}">
-                                    <optgroup
-                                        label="{{ productos.subcategoria.nombre }}">
-                                        <option
-                                            value="{{ productos.id }}">{{
-                                            productos.nombre }}</option>
-                                    </optgroup>
+                            <select name="producto" id="producto" class="form-control select2bs4">
+                                {% for categoria, subcategorias in categorias_y_productos.items() %}
+                                <optgroup label="{{ categoria }}">
+                                    {% for subcategoria, productos in subcategorias['subcategorias'].items() %}
+                                <optgroup label="{{ subcategoria }}">
+                                    {% for producto in productos['productos'] %}
+                                    <option value="{{ producto.id }}">{{ producto.nombre }}</option>
+                                    {% endfor %}
                                 </optgroup>
-
+                                {% endfor %}
+                                </optgroup>
                                 {% endfor %}
                             </select>
+
 
                         </div>
                         <div class="form-group">
                             <label>Nuevo precio</label>
-                            <input type="text"
-                                name="precio_actual"
-                                class="form-control"
-                                required>
+                            <input type="text" name="precio_actual" class="form-control" required>
                         </div>
 
-                        <select name="estado" id
-                            class="form-control">
+                        <select name="estado" id class="form-control">
                             <option value="1">Activo</option>
                             <option value="2">Inactivo</option>
                         </select>
                     </div>
                     <div class="modal-footer">
                         <input type="button" class="btn
-                                btn-default"
-                            data-dismiss="modal"
-                            value="Cancel">
+                                btn-default" data-dismiss="modal" value="Cancel">
                         <input type="submit" class="btn
                                 btn-success" value="Asignar">
                     </div>
@@ -157,57 +141,35 @@
     <div id="modal-default{{productos.id}}" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form
-                    action="/actualizar_precio/{{productos.id}}"
-                    method="post" enctype="multipart/form-data">
+                <form action="/actualizar_precio/{{productos.id}}" method="post" enctype="multipart/form-data">
                     <div class="modal-header">
                         <h4 class="modal-title">Editar precios</h4>
-                        <button type="button" class="close"
-                            data-dismiss="modal"
-                            aria-hidden="true">&times;</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
                             <label>Producto: </label>
-                            <input type="text"
-                                value="{{productos.id_producto}}"
-                                hidden>
-                            <input type="text"
-                                class="form-control"
-                                value="{{productos.producto.nombre}}"
-                                disabled>
+                            <input type="text" value="{{productos.id_producto}}" hidden>
+                            <input type="text" class="form-control" value="{{productos.producto.nombre}}" disabled>
                         </div>
 
                         <div class="form-group">
                             <label>Nuevo precio</label>
-                            <input type="number"
-                                name="precio_actual"
-                                class="form-control"
-                                >
-                            <input type="number"
-                                name="precio_anterior"
-                                class="form-control"
-                                value="{{productos.precio_actual}}"
-                                hidden>
+                            <input type="number" name="precio_actual" class="form-control">
+                            <input type="number" name="precio_anterior" class="form-control"
+                                value="{{productos.precio_actual}}" hidden>
                         </div>
 
                         <div class="form-group">
-                            <select name="estado" id
-                                class="form-control">
-                                <option value="1" {% if
-                                    productos.estado ==
-                                    1 %}selected{% endif %}>Activo</option>
-                                <option value="2" {% if
-                                    productos.estado ==
-                                    2 %}selected{% endif %}>Inactivo</option>
+                            <select name="estado" id class="form-control">
+                                <option value="1" {% if productos.estado==1 %}selected{% endif %}>Activo</option>
+                                <option value="2" {% if productos.estado==2 %}selected{% endif %}>Inactivo</option>
                             </select>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <input type="button" class="btn
-                                btn-default"
-                            data-dismiss="modal"
-                            value="Cancel">
+                                btn-default" data-dismiss="modal" value="Cancel">
                         <input type="submit" class="btn
                                 btn-info" value="Save">
                     </div>
@@ -224,23 +186,18 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Eliminar producto</h4>
 
-                        <button type="button" class="close"
-                            data-dismiss="modal"
-                            aria-hidden="true">&times;</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <input type="number" name="id"
-                            value="{{ productos.id }}" hidden>
+                        <input type="number" name="id" value="{{ productos.id }}" hidden>
 
                         <p>Estas seguro que quieres eliminar el precio</p>
-                     
+
                     </div>
                     <div class="modal-footer">
                         <input type="button" class="btn
-                                btn-default"
-                            data-dismiss="modal"
-                            value="Cancel">
-                            <button type="submit" class="btn btn-outline-light">Aceptar</button>
+                                btn-default" data-dismiss="modal" value="Cancel">
+                        <button type="submit" class="btn btn-outline-light">Aceptar</button>
                     </div>
                 </form>
             </div>
