--- a/templates/base.html
+++ b/templates/base.html
@@ -333,6 +333,8 @@
         <script
             src="{{ url_for('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
         <!-- AdminLTE App -->
+        <script src="{{ url_for('static', filename='plugins/select2/js/select2.full.min.js') }}"></script>
+
         <script
             src="{{ url_for('static', filename='dist/js/adminlte.min.js') }}"></script>
         <!-- AdminLTE for demo purposes -->
