--- a/templates/card.html
+++ b/templates/card.html
@@ -13,94 +13,97 @@
                 <div class="card shadow-sm border">
                     <div class="p-4">
                         <h5 class="card-title mb-3">Informacion de compra</h5>
-                        <div class="row mb-3">
-                            <div class="col-md-6 mb-3">
-                                <!-- Default checked radio -->
-                                <div class="form-check h-100 border rounded-3">
-                                    <div class="p-3">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                            id="flexRadioDefault1"  />
-                                        <label class="form-check-label" for="flexRadioDefault1">
-                                            Por correo<br />
-                                            <small class="text-muted">2-10 dias por correo</small>
-                                        </label>
+                        <form action="/guardar_venta" method="post" enctype="multipart/form-data">
+                            <div class="row mb-3">
+                                <div class="col-md-6 mb-3">
+                                    <!-- Default checked radio -->
+                                    <div class="form-check h-100 border rounded-3">
+                                        <div class="p-3">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                id="flexRadioDefault1" value="Correo" />
+                                            <label class="form-check-label" for="flexRadioDefault1">
+                                                Por correo<br />
+                                                <small class="text-muted">2-10 dias por correo</small>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <!-- Default radio -->
+                                    <div class="form-check h-100 border rounded-3">
+                                        <div class="p-3">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                id="flexRadioDefault2" value="Casimiro Sotelo"/>
+                                            <label class="form-check-label" for="flexRadioDefault2">
+                                                Casimiro Sotelo <br />
+                                                <small class="text-muted">5-7 dias para la entrega </small>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <!-- Default radio -->
+                                    <div class="form-check h-100 border rounded-3">
+                                        <div class="p-3">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                id="flexRadioDefault2" value="UNI RUSB" />
+                                            <label class="form-check-label" for="flexRadioDefault2">
+                                                UNI RUSB <br />
+                                                <small class="text-muted">5-7 dias para la entrega </small>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <!-- Default radio -->
+                                    <div class="form-check h-100 border rounded-3">
+                                        <div class="p-3">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                id="flexRadioDefault2" value="Masaya"/>
+                                            <label class="form-check-label" for="flexRadioDefault2">
+                                                MASAYA <br />
+                                                <small class="text-muted">5-7 dias para la entrega </small>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <!-- Default radio -->
+                                    <div class="form-check h-100 border rounded-3">
+                                        <div class="p-3">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                id="flexRadioDefault2" value="Metrocentro"/>
+                                            <label class="form-check-label" for="flexRadioDefault2">
+                                                Metrocentro <br />
+                                                <small class="text-muted">5-7 dias para la entrega </small>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="row" id="mostrar" style="display: none;">
+                                <div class="col-md-12 mb-3 ">
+                                    <p class="mb-0">Direccion</p>
+                                    <div class="form-outline">
+                                        <textarea name="direccion" id="direccion" cols="30" rows="5"
+                                            class="form-control"></textarea>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-3">
-                                <!-- Default radio -->
-                                <div class="form-check h-100 border rounded-3">
-                                    <div class="p-3">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                            id="flexRadioDefault2" />
-                                        <label class="form-check-label" for="flexRadioDefault2">
-                                            Casimiro Sotelo <br />
-                                            <small class="text-muted">5-7 dias para la entrega </small>
-                                        </label>
-                                    </div>
-                                </div>
+
+
+
+
+
+                            <div class="float-end">
+                                <button class="btn btn-light border">Cancel</button>
+                                <button type="submit" class="btn btn-success shadow-0 border">Pagar</button>
                             </div>
-                            <div class="col-md-6 mb-3">
-                                <!-- Default radio -->
-                                <div class="form-check h-100 border rounded-3">
-                                    <div class="p-3">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                            id="flexRadioDefault2" />
-                                        <label class="form-check-label" for="flexRadioDefault2">
-                                            UNI RUSB <br />
-                                            <small class="text-muted">5-7 dias para la entrega </small>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <!-- Default radio -->
-                                <div class="form-check h-100 border rounded-3">
-                                    <div class="p-3">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                            id="flexRadioDefault2" />
-                                        <label class="form-check-label" for="flexRadioDefault2">
-                                            MASAYA <br />
-                                            <small class="text-muted">5-7 dias para la entrega </small>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12 mb-3">
-                                <!-- Default radio -->
-                                <div class="form-check h-100 border rounded-3">
-                                    <div class="p-3">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                            id="flexRadioDefault2" />
-                                        <label class="form-check-label" for="flexRadioDefault2">
-                                            Metrocentro <br />
-                                            <small class="text-muted">5-7 dias para la entrega </small>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="row" id="mostrar"  style="display: none;">
-                            <div class="col-md-12 mb-3 ">
-                                <p class="mb-0">Direccion</p>
-                                <div class="form-outline">
-                                    <textarea name="direccion" id="direccion" cols="30" rows="5"
-                                        class="form-control"></textarea>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-
-
-                        <div class="float-end">
-                            <button class="btn btn-light border">Cancel</button>
-                            <button class="btn btn-success shadow-0 border">Continue</button>
-                        </div>
+                        </form>
                     </div>
+
                 </div>
                 <!-- Checkout -->
 
