--- a/templates/sub_categoria.html
+++ b/templates/sub_categoria.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %} || Sub categoria{% endblock %}
 {% block css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='plugins/select2/css/select2.min.css') }}">
+<link rel="stylesheet"
+    href="{{ url_for('static', filename='plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css') }}">
 <link rel="stylesheet"
     href="{{ url_for('static', filename='plugins/datatables-bs4/css/dataTables.bootstrap4.min.css') }}">
 <link rel="stylesheet"
@@ -103,7 +106,7 @@
                         <div class="form-group">
                             <label>Categoria</label>
                             <select name="categoria" id=""
-                                class="form-control">
+                                class="form-control select2bs4">
                                 {% for categoria in categorias %}
                                 <option value="{{categoria.id}}">{{categoria.nombre}}</option>
                                 
@@ -157,7 +160,7 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label>Categoria</label>
-                            <select name="categoria" id="categoria" class="form-control">
+                            <select name="categoria" class="form-control select2bs4">
                                 {% for categoria in categorias %}
                                     <option value="{{categoria.id}}" {% if categoria.id == subcategoria.categoria.id %}selected{% endif %}>{{categoria.nombre}}</option>
                                 {% endfor %}
