--- a/templates/venta.html
+++ b/templates/venta.html
@@ -427,6 +427,12 @@
                             <input type="number" name="descuento"
                                 id="descuento"
                                 min="0"
+                                class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Descuento hacia el pedido</label>
+                            <input type="date" name="fecha_entrega" id="fecha"
+                                min=""
                                 class="form-control" required>
                         </div>
                     </div>
@@ -443,4 +449,12 @@
     </div>
 {% endfor %}
 </section>
+<script>
+    // Obtén la fecha actual en el formato YYYY-MM-DD
+var fechaActual = new Date().toISOString().split('T')[0];
+
+// Asigna la fecha actual al atributo "min" del campo de entrada
+document.getElementById('fecha').setAttribute('min', fechaActual);
+
+</script>
 {% endblock %}
