--- a/templates/card.html
+++ b/templates/card.html
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <input type="text" name="total" value="{{total_carrito}}" hidden>
 
 
 
@@ -142,7 +142,7 @@
                     <h6 class="mb-3">Sumatoria</h6>
                     <hr />
                     <div class="d-flex justify-content-between">
-                        <p class="mb-2">Total price:</p>
+                        <p class="mb-2">Total de la compra:</p>
                         <p class="mb-2 fw-bold">C${{total_carrito}}</p>
                     </div>
 
